@@ -2170,6 +2170,10 @@ assemble_external (tree decl ATTRIBUTE_UNUSED)
       If it's not, we should not be calling this function.  */
   gcc_assert (asm_out_file);
 
+  /* In a perfect world, the following condition would be true.
+     Sadly, the Java and Go front ends emit assembly *from the front end*,
+     bypassing the call graph.  See PR52739.  Fix before GCC 4.8.  */
+#if 0
   /* This function should only be called if we are expanding, or have
      expanded, to RTL.
      Ideally, only final.c would be calling this function, but it is
@@ -2177,6 +2181,7 @@ assemble_external (tree decl ATTRIBUTE_UNUSED)
      for further discussion.  */
   gcc_assert (cgraph_state == CGRAPH_STATE_EXPANSION
 	      || cgraph_state == CGRAPH_STATE_FINISHED);
+#endif
 
   if (!DECL_P (decl) || !DECL_EXTERNAL (decl) || !TREE_PUBLIC (decl))
     return;
